Fixed not centered spinner in login/register form

--- a/src/components/UI/Buttons/ButtonWithSpinner/ButtonWithSpinner.scss
+++ b/src/components/UI/Buttons/ButtonWithSpinner/ButtonWithSpinner.scss
@@ -2,5 +2,6 @@
   &__spinner-container {
     width: 100%;
     padding: 0;
+    display: flex;
   }
 }
